--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "10.4.5",
     "bootstrap": "^5.1.3",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.0.0-beta.5",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.53.0",
     "web-vitals": "^2.1.4"
   },
+  "overrides": { "autoprefixer": "10.4.5" },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -39,4 +42,5 @@
       "last 1 safari version"
     ]
   }
+  
 }
