--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "10.4.5",
+    "axios": "0.19.2",
     "bootstrap": "^5.1.3",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
@@ -17,7 +18,6 @@
     "sass": "^1.53.0",
     "web-vitals": "^2.1.4"
   },
-  "overrides": { "autoprefixer": "10.4.5" },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -42,5 +42,4 @@
       "last 1 safari version"
     ]
   }
-  
 }
