--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "axios": "0.19.2",
     "bootstrap": "^5.1.3",
     "node-sass": "^7.0.1",
-    "react": "^18.2.0",
+    "react": "^16.13.1",
     "react-bootstrap": "^2.0.0-beta.5",
-    "react-dom": "^18.2.0",
+    "react-dom": "^16.13.1",
+    "react-redux": "7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "redux": "4.0.5",
     "sass": "^1.53.0",
     "web-vitals": "^2.1.4"
   },
