--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^7.0.1",
     "react": "^16.13.1",
     "react-bootstrap": "^2.0.0-beta.5",
+    "react-confirm-alert": "2.6.1",
     "react-dom": "^16.13.1",
     "react-redux": "7.2.0",
     "react-router-dom": "^5.2.0",
